<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/materialSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="36dp"
        android:checked="false"
        android:text="@string/usePassword"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleteAll"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/materialButton2"
        app:layout_constraintStart_toStartOf="@+id/materialSwitch"
        app:layout_constraintTop_toTopOf="@+id/materialButton2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/delete"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/materialSwitch"
        app:layout_constraintTop_toBottomOf="@+id/materialSwitch" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/materialButton2"
        tools:layout_editor_absoluteX="36dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/share"
        style="@style/Widget.Material3.Button.TextButton.Dialog.Flush"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:text="@string/shareApp"
        android:textColor="?colorOnPrimaryContainer"
        app:icon="@drawable/baseline_share_24"
        app:iconGravity="textStart"
        app:iconTint="?colorOnPrimaryContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialDivider" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/rate"
        style="@style/Widget.Material3.Button.TextButton.Dialog.Flush"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:text="@string/rate"
        android:textColor="?colorOnPrimaryContainer"
        app:icon="@drawable/baseline_rate_review_24"
        app:iconGravity="textStart"
        app:iconTint="?colorOnPrimaryContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/share" />
</androidx.constraintlayout.widget.ConstraintLayout>